Bugfixing and missing features